--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "prettier": "^3.3.3",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-photo-album": "^3.0.2",
+    "react-grid-gallery": "^1.0.1",
     "react-router-dom": "^6.27.0",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.0"
